UseSubwordForMaxVector causes performance regression

XMLWordPrintable

    • b22

        While investigating JDK-8194659, I've noticed that disabling UseSubwordForMaxVector (which is enabled by default) improves performance.

        The optimization reduces performance of the SPECjvm2008-MPEG benchmark by up to 3.5% and also affects performance of other benchmarks (see JDK-8194659 for details).

              Assignee:
              Vivek Deshpande (Inactive)
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: