8194740: UseSubwordForMaxVector causes performance regression

Reviewed-by: kvn, thartmann